# EvolveAI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bootstrap/: app-builder-prompt.md  meta-agent-paper.txt
meta_agent/: Dockerfile  command_history.py  config.py  llm_client.py  main.py  meta_agent.py  requirements.txt
web_ui/: Dockerfile  app.py  requirements.txt
web_ui/templates/: index.html
