[tool.poetry]
name = "meta-agent"
version = "0.1.0"
description = "A meta-agent application for processing queries and solving complex problems"
authors = ["Your Name <you@example.com>"]
packages = [{include = "meta_agent"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0.1"
docker = "^5.0.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
